# alisodsin.github.io

./: .gitignore  1.json  ArabyChat.htm  English words.html  Kashida.html  README.md  addNames.html  addNames1.html  adtionalCommands.html  ali.js  arabic.js  arby.js  arby.user.js  auto.ahk  autopy.ahk  bubbles.html  c.html  cht.js  commands.html  cpp.html  csharp.html  csharpAdvanced.html  csharpInDepth.html  docker.txt  dodo.js  femaleNames.json  femaleNames.txt  fileserver.html  gitHubInfo.htm  go.html  go.sh  index.html  introduction.html  javaKotlin.html  javaScript.html  javaScript_1.html  javaScript_2.html  kalam.js  kalam.user.js  kalamAi.js  (+36 more)
ArabyChat_files/: code.js  style.css
asmb/: 1.html
assets/: index-29M5CSwV.css  index-3_dB7Ma4.js  index-94eItXW0.css  index-G9Qmybru.js
java/: makeJar
java/seprator/: Io.java
mera/: code.js  index.html  style.css
notes/: index.html  index.js  style.css
ns/: index.html
ns/assets/: index-6G0bdahG.css  index-zZTYLMVI.js
soracut/: index.html  script.js  style.css
study/cpp/: CMakeLists.txt  c
study/gui/java/: c  o.txt  oldc  pom.xml
study/gui/java/lib/: Functions.java
study/gui/java/src/: Controller.java
study/gui/java/src/lib/: Functions.java
study/gui/java/src/resources/: s.css  v1.fxml  v2.fxml
study/gui/javam/: c
study/java/: Main.java  c  o.txt  oldC  x
study/java/lib/: Functions.java
study/node/: c  package-lock.json  package.json
study/python/: c
studyenv/java/: Main.java  c  makeJar
studyenv/java/lib/: Functions.java
studyenv/java/seprator/: S.java
(+6 files in other folders)
